--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "ejs": "^3.1.9",
     "mysql2": "^3.9.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
