--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # dotenv environment variable files
+constant.ts
 .env
 .env.development.local
 .env.test.local
